[project]
name = "food-delivery-service-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.6",
    "prisma>=0.15.0",
    "pytest>=8.3.4",
    "httpx>=0.28.1",
    "pytest-asyncio>=0.25.3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "ruff>=0.7.3",
]

#[tool.pytest.ini_options]
#asyncio_mode = "auto"
#asyncio_default_fixture_loop_scope = "session"
#log_cli = true
#log_cli_level = "INFO"
#log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
#log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']